RESOLVED FIXED198267
[iOS] Dropping in an editable element shouldn't result in a ranged selection
https://bugs.webkit.org/show_bug.cgi?id=198267
Summary [iOS] Dropping in an editable element shouldn't result in a ranged selection
Wenson Hsieh
Reported 2019-05-26 21:21:21 PDT
Attachments
Patch (19.61 KB, patch)
2019-05-26 22:49 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-05-26 22:49:56 PDT
Wenson Hsieh
Comment 2 2019-05-27 15:09:59 PDT
> Failures in API Test first run: set([u'TestWebKitAPI._WKDownload.DownloadMonitorCancel']) > Failures in API Test second run: set([u'TestWebKitAPI._WKDownload.DownloadMonitorCancel']) > Flaky Tests: set([]) > Failures in API Test on clean tree: set([]) > New failures: set([u'TestWebKitAPI._WKDownload.DownloadMonitorCancel']) The macOS API test failure seems unrelated.
Tim Horton
Comment 3 2019-05-27 17:26:22 PDT
Comment on attachment 370669 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=370669&action=review > Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:881 > static auto defaultTextIndicatorOptionsForEditDrag = TextIndicatorOptionIncludeSnapshotOfAllVisibleContentWithoutSelection | TextIndicatorOptionExpandClipBeyondVisibleRect | TextIndicatorOptionPaintAllContent | TextIndicatorOptionIncludeMarginIfRangeMatchesSelection | TextIndicatorOptionPaintBackgrounds | TextIndicatorOptionComputeEstimatedBackgroundColor| TextIndicatorOptionUseSelectionRectForSizing | TextIndicatorOptionIncludeSnapshotWithSelectionHighlight; Ho-ly crap
Wenson Hsieh
Comment 4 2019-05-27 17:35:17 PDT
Comment on attachment 370669 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=370669&action=review >> Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:881 >> static auto defaultTextIndicatorOptionsForEditDrag = TextIndicatorOptionIncludeSnapshotOfAllVisibleContentWithoutSelection | TextIndicatorOptionExpandClipBeyondVisibleRect | TextIndicatorOptionPaintAllContent | TextIndicatorOptionIncludeMarginIfRangeMatchesSelection | TextIndicatorOptionPaintBackgrounds | TextIndicatorOptionComputeEstimatedBackgroundColor| TextIndicatorOptionUseSelectionRectForSizing | TextIndicatorOptionIncludeSnapshotWithSelectionHighlight; > > Ho-ly crap Quite :/
WebKit Commit Bot
Comment 5 2019-05-27 18:03:15 PDT
Comment on attachment 370669 [details] Patch Clearing flags on attachment: 370669 Committed r245803: <https://trac.webkit.org/changeset/245803>
WebKit Commit Bot
Comment 6 2019-05-27 18:03:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.